testdata/baselines/reference/submodule/compiler/jsxClassAttributeResolution.errors.txt
file.tsx(2,18): error TS2875: This JSX tag requires the module path 'react/jsx-runtime' to exist, but none could be found. Make sure you have types for the appropriate package installed.
file.tsx(2,19): error TS2322: Type '{}' is not assignable to type 'IntrinsicClassAttributes<T>'.
  Property 'ref' is missing in type '{}' but required in type 'IntrinsicClassAttributesAlias<T>'.


==== file.tsx (2 errors) ====
    class App {}
    export const a = <App></App>;
                     ~~~~~~~~~~~
!!! error TS2875: This JSX tag requires the module path 'react/jsx-runtime' to exist, but none could be found. Make sure you have types for the appropriate package installed.
                      ~~~
!!! error TS2322: Type '{}' is not assignable to type 'IntrinsicClassAttributes<T>'.
!!! error TS2322:   Property 'ref' is missing in type '{}' but required in type 'IntrinsicClassAttributesAlias<T>'.
!!! related TS2728 node_modules/@types/react/index.d.ts:2:5: 'ref' is declared here.
==== node_modules/@types/react/package.json (0 errors) ====
    {
        "name": "@types/react",
        "version": "0.0.1",
        "main": "",
        "types": "index.d.ts",
    }
==== node_modules/@types/react/index.d.ts (0 errors) ====
    interface IntrinsicClassAttributesAlias<T> {
        ref: T
    }
    declare namespace JSX {
        type IntrinsicClassAttributes<T> = IntrinsicClassAttributesAlias<T>
    }
==== node_modules/@types/react/jsx-runtime.d.ts (0 errors) ====
    import './';
==== node_modules/@types/react/jsx-dev-runtime.d.ts (0 errors) ====
    import './';
    